# opf-potpourri

./: .gitattributes  .gitignore  .pre-commit-config.yaml  1-LV-rural1--1-no_sw.xlsx  1-LV-semiurb5--0-no_sw.xlsx  1-MVLV-urban-all-0-no_sw.xlsx  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Toolvorstellung_potpourri.pptx  environment.yaml  environment.yml  file6.txt  main.py  mkdocs.yml  paper.bib  paper.md  pyproject.toml  references.bib  requirements.txt  results.xlsx  setup.py  simbench_time_series.py  test_networks.txt  test_simbench.xlsx
.github/workflows/: ci.yml
data/: emob_profiles.pkl
docs/: architecture.md  getting-started.md  index.md  mathematical-modelling.md  scientific-work.md
docs/api/: devices.md  models.md  multi-period.md  utilities.md
docs/scripts/: examples.md  feasible-operation-region.md  loadcases.md  validation.md
docs/user-guide/: devices.md  logging.md  multi-period.md  single-period.md  solvers.md
potpourri/: __init__.py  config.py  main.py
potpourri.egg-info/: PKG-INFO  SOURCES.txt
potpourri/data/: Timeseries_50.763_6.081_SA2_1kWp_crystSi_14_41deg_-2deg_2020_2020.json  hv_grid.pkl
potpourri/data/scenarios/: 1-HV-mixed--0-no_sw_loadcases_assumption_scenarios_with_q.pkl  hv_grid_loadcases_assumption_scenarios_with_q.pkl
potpourri/models/: AC.py  ACLF.py  ACOPF.py  ACOPF_base.py  ACOPF_max_cost.py  ACOPF_min_gen.py  ACOPF_multiperiod.py  ACOPF_multiperiod_battery.py  ACOPF_multiperiod_battery_relaxed.py  ACOPF_multiperiod_battery_simplified.py  DC.py  DCLF.py  DCOPF.py  DCOPF_quadratic.py  Flexibility.py  HCOPF.py  OPF.py  SCOPF.py  UC.py  basemodel.py  pyo_to_net.py
potpourri/models/class_based/: AC.py  ACLF.py  ACOPF_base.py  DC.py  DCLF.py  DCOPF.py  HC_ACOPF.py  HC_OPF.py  OPF.py  basemodel.py  pyo_to_net.py
potpourri/models_multi_period/: AC.py  ACOPF_multi_period.py  AC_multi_period.py  DC.py  DCOPF_multi_period.py  DC_multi_period.py  EVs_multi_period.py  HC_ACOPF.py  OPF.py  OPF_multi_period.py  __init__.py  basemodel_multi_period.py  battery_multi_period.py  generator_multi_period.py  init_pyo_from_pp_res.py  pv_multi_period.py  pyo_to_net_multi_period.py  sgens_multi_period.py
potpourri/net_augmentation/: __init__.py  prepare_net.py
potpourri/results/: results.xlsx  results_multiperiod.xlsx  results_multiperiod_2.xlsx  results_multiperiod_exact.xlsx  results_multiperiod_extended.xlsx  results_multiperiod_relaxed.xlsx  results_multiperiod_simplified.xlsx
potpourri/scripts/: filtermat2oats.py  model.lp  printdata.py  printoutput.py  pyo_to_net.py  run.py  runcase.py  selecttestcase.py  set_gurobi_key.py  test_classbased.py  utils.py  visualize.py  visualize3.py  vizualize2.py
potpourri/scripts/classbased/: chance_constraint.py  evaluate_scenario_results.py  feasible_operation_region.py  init_pyo_from_pp_res.py  loadcases.py  multiobj.py  node_potential.py  plot_functions.py  run_scenarios.py  run_timeseries.py  sensi_q_control_wind.py  sensitivity_analysis_trafos_lines.py  test_classbased.py  validation.py  variation_SLmax_SLmaxT_vmax.py  variation_SLmax_peGmax_SWmax.py
potpourri/scripts/converter/: filter_mat2oats.py  filter_pglib-opf2oats.py  filter_pp2oats.py
potpourri/testcases/: case9.xlsx  case9241pegase.xlsx
scripts/: README.md  acopf_loadcase_analysis.py  battery_multi_period_opf.py  chance_constraint.py  compare_solvers.py  compute_feasible_operation_region.py  constraint_activation_demo.py  dc_opf.py  evaluate_scenario_results.py  feasible_operation_region.py  generator_capability_curve_demo.py  hosting_capacity_opf.py  hv_grid.xlsx  loadcases.py  minimal_ac_power_flow.py  multi_period_acopf.py  multiobj.py  node_potential.py  objective_tradeoff_demo.py  pandapower_to_pyomo_inspection.py  performance_test_solver.py  plot_functions.py  run_scenarios.py  run_timeseries.py  sensi_q_control_wind.py  sensitivity_analysis_trafos_lines.py  test_classbased.py  time_series_snapshot_opf.py  validate_ac_model_against_pandapower.py  validation.py  variation_SLmax_SLmaxT_vmax.py  variation_SLmax_peGmax_SWmax.py
src/opf_potpourri.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/potpourri/: __init__.py
src/potpourri/data/: da_prices_hourly_2022.xlsx
src/potpourri/models/: AC.py  ACOPF_base.py  DC.py  DCOPF.py  HC_ACOPF.py  OPF.py  __init__.py  basemodel.py  init_pyo_from_pp_res.py  pyo_to_net.py
src/potpourri/models_multi_period/: ACOPF_multi_period.py  AC_multi_period.py  DCOPF_multi_period.py  DC_multi_period.py  EVs_multi_period.py  HC_ACOPF_multi_period.py  OPF_multi_period.py  __init__.py  basemodel_multi_period.py  battery_multi_period.py  demand_multi_period.py  electric_vehicle_multi_period.py  flexibility_multi_period.py  generator_multi_period.py  heat_pump_multi_period.py  init_pyo_from_pp_res_multi_period.py  pv_multi_period.py  pyo_to_net_multi_period.py  sgens_multi_period.py  shunts_multi_period.py  (+1 more)
testcases/: test_networks.py  test_simbench.xlsx
testcases/matpower/: .~lock.case14_battery.xlsx#  case14.xlsx  case14_battery.xlsx  case14_battery2.xlsx  case24_battery.xlsx  case24_ieee_rts.xlsx  case9_battery.xlsx  case9_battery2.xlsx  doc  test_simbench.xlsx
testcases/pglib-opf/: pglib_opf_case1354_pegase.xlsx  pglib_opf_case14_ieee.xlsx  pglib_opf_case5_pjm.xlsx
testcases/simbench/: 1-LV-rural1--1-no_sw.xlsx  1-LV-rural1--1-no_sw_local.xlsx  1-LV-rural1--1-no_sw_local_2.xlsx  1-LV-rural1--1-no_sw_local_3.xlsx  1-LV-rural1--2-no_sw.xlsx  1-LV-rural2--2-no_sw.xlsx  1-LV-rural3--2-no_sw.xlsx  1-LV-semiurb4--2-no_sw.xlsx  1-LV-semiurb5--0-no_sw.xlsx  1-LV-semiurb5--2-no_sw.xlsx  1-LV-urban6--2-no_sw.xlsx  1-MV-comm--2-no_sw.xlsx  1-MV-rural--2-no_sw.xlsx  1-MV-urban--2-no_sw.xlsx
tests/: conftest.py
tests/installation_with_pip/: test_import.py  test_public_api.py
tests/unit_tests/: test_ac_model.py  test_acopf.py  test_basemodel.py  test_dcopf.py  test_multi_period.py
tutorials/: battery_mpopf.py  create_emob_timeseries.ipynb  dc_opf.py  ev_arbitrage.py  hc_acopf.py  mpopf.ipynb  mpopf.py  opf.ipynb  opf.py
(+17 files in other folders)
