[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opf-potpourri"
version = "0.2.0"
description = "Multi-period Optimal Power Flow for distribution grids with storage — Pyomo models over pandapower networks"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Steffen Kortmann", email = "s.kortmann@iaew.rwth-aachen.de" },
    { name = "Andreas Bong",     email = "a.bong@iaew.rwth-aachen.de" },
    { name = "Simon Braun",      email = "s.braun@iaew.rwth-aachen.de" },
    { name = "Alexander Och",    email = "a.och@iaew.rwth-aachen.de" },
    { name = "Farah Nasr",       email = "f.nasr@iaew.rwth-aachen.de" },
    { name = "Philip Kvesic",    email = "p.kvesic@iaew.rwth-aachen.de" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
keywords = ["power systems", "pandapower", "optimal power flow", "pyomo", "distribution grid", "multi-period", "OPF"]
dependencies = [
    "loguru>=0.7",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandapower>=2.13",
    "pandas>=2.0",
    "pyomo>=6.7",
    "simbench>=1.4",
]

[project.optional-dependencies]
gurobi = [
    "gurobipy>=10.0",
]
tutorials = [
    "jupyterlab>=4.0",
    "notebook>=7.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]
dev = [
    "black>=24.0",
    "flake8>=7.0",
    "pytest>=8.0",
]

[project.urls]
Homepage      = "https://gitlab.iaew.rwth-aachen.de/aev/potpourri/"
Repository    = "https://gitlab.iaew.rwth-aachen.de/aev/potpourri/"
Documentation = "https://gitlab.iaew.rwth-aachen.de/aev/potpourri/"
"Bug Tracker" = "https://gitlab.iaew.rwth-aachen.de/aev/potpourri/-/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"potpourri" = ["data/*.pkl", "data/*.xlsx"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "pytest>=8.4.2",
]
