[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opf-potpourri"
version = "0.2.1"
description = "Multi-period Optimal Power Flow for distribution grids with storage — Pyomo models over pandapower networks"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Steffen Kortmann", email = "s.kortmann@iaew.rwth-aachen.de" },
    { name = "Andreas Bong",     email = "a.bong@iaew.rwth-aachen.de" },
    { name = "Simon Braun",      email = "s.braun@iaew.rwth-aachen.de" },
    { name = "Alexander Och",    email = "a.och@iaew.rwth-aachen.de" },
    { name = "Farah Nasr",       email = "f.nasr@iaew.rwth-aachen.de" },
    { name = "Philip Kvesic",    email = "p.kvesic@iaew.rwth-aachen.de" },
    { name = "Nina Stumberger",  email = "n.stumberger@iaew.rwth-aachen.de" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
keywords = [
    "power systems",
    "pandapower",
    "optimal power flow",
    "pyomo",
    "distribution grid",
    "multi-period",
    "OPF",
]
dependencies = [
    "loguru>=0.7",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandapower>=2.13",
    "pandas>=2.0",
    "pyomo>=6.7",
    "simbench>=1.4",
]

[project.optional-dependencies]
gurobi = [
    "gurobipy>=10.0",
]
notebooks = [
    "jupyterlab>=4.0",
    "notebook>=7.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocs-bibtex>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=4.0",
]
performance-test = [
    "perfplot>=0.10.2",
]

[project.urls]
Homepage      = "https://github.com/RWTH-IAEW/opf-potpourri"
Repository    = "https://github.com/RWTH-IAEW/opf-potpourri"
Documentation = "https://opf-potpourri.readthedocs.io/"
"Bug Tracker" = "https://github.com/RWTH-IAEW/opf-potpourri/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"potpourri" = ["data/*.pkl", "data/*.xlsx"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
# F403/F405: `from pyomo.environ import *` is standard Pyomo convention.
# E741: single-letter `l` is the standard line-index variable in power systems math.
ignore = ["E741", "F403", "F405"]

[tool.ruff.lint.per-file-ignores]
# Tutorial notebooks converted to percent-format scripts; imports appear mid-file.
"tutorials/*.py"   = ["E402", "E501"]
"tutorials/*.ipynb" = ["E501"]
"scripts/*.py"     = ["E501"]
"tests/**/*.py"    = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests that require a remote solver or network access",
]
